--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 17 13:33:10 IST 2023
-sdk.dir=C\:\\Users\\debas\\AppData\\Local\\Android\\Sdk
+#Thu Sep 28 11:57:50 IST 2023
+sdk.dir=D\:\\AndroidStudio\\Sdk
