--- a/.github/workflows/buildApp.yaml
+++ b/.github/workflows/buildApp.yaml
@@ -11,7 +11,14 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout code
@@ -32,5 +39,5 @@ jobs:
       - name: Upload app
         uses: actions/upload-artifact@v3
         with:
-          name: app
+          name: App
           path: build/compose/binaries/main-release/app/
